# GVG_AMP

GvgAmpClient/: CMakeLists.txt  ISSUES  LICENSE-MIT  README.md  pango_test.tga
GvgAmpClient/doc/: CMakeLists.txt  Doxyfile.in
GvgAmpClient/include/gvgampclient/: gvgampclient.h
GvgAmpClient/java/: CMakeLists.txt  gvgampclient.i
GvgAmpClient/php/: CMakeLists.txt  README_Php.md  gvgampclient.i
GvgAmpClient/src/gvgampclient/: gvgampclient.cpp
GvgAmpClient/test/: CMakeLists.txt
GvgAmpClient/test/gvgampclient/: AMPServerTest.py  test_gvgampclient.cpp  test_gvgampclient.php
